syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message DeleteSalesArrangementRequest {
	int32 SalesArrangementId = 1;

	bool HardDelete = 2;
}